@@ -11,6 +11,7 @@ import Bob_BE.domain.menu.dto.request.MenuRequestDto.MenuCreateRequestDto.Create
 import Bob_BE.domain.menu.dto.response.MenuResponseDto;
 import Bob_BE.domain.menu.entity.Menu;
 import Bob_BE.domain.menu.repository.MenuRepository;
+import Bob_BE.domain.operatingHours.entity.OperatingHours;
 import Bob_BE.domain.owner.entity.Owner;
 import Bob_BE.domain.owner.repository.OwnerRepository;
 import Bob_BE.domain.owner.service.OwnerService;
@@ -33,13 +34,15 @@ import Bob_BE.domain.storeUniversity.service.StoreUniversityService;
 import Bob_BE.global.response.code.resultCode.ErrorStatus;
 import Bob_BE.global.response.exception.GeneralException;
 import Bob_BE.global.response.exception.handler.*;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.Cacheable;
 
 import Bob_BE.global.util.JwtTokenProvider;
 import Bob_BE.global.util.aws.S3StorageService;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
-
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
@@ -49,6 +52,10 @@ import java.util.Map;
 import Bob_BE.global.util.google.GoogleCloudOCRService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.geo.Distance;
+import org.springframework.data.geo.Metrics;
+import org.springframework.data.geo.Point;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import lombok.extern.slf4j.Slf4j;
@@ -79,6 +86,8 @@ public class StoreService {
     private final GoogleCloudOCRService googleCloudOCRService;
     private final JwtTokenProvider jwtTokenProvider;
 
+    @Autowired
+    private final RedisTemplate<String, Object> redisTemplate;
 
 
     @Transactional
@@ -249,7 +258,7 @@ public class StoreService {
 
         List<Store> storeList = storeUniversityList.stream()
                 .map(StoreUniversity::getStore)
-                .collect(Collectors.toList());
+                .toList();
 
         return storeList.stream()
                 .map(store -> {
@@ -311,6 +320,109 @@ public class StoreService {
         datas.add(data);
 
         return StoreConverter.toCertificateResultDto(datas);
+    }
+
+    @Cacheable(value = "storeSearch", key = "#param.keyword")
+    public List<StoreResponseDto.GetStoreSearchDto> searchStoreWithMenus(
+            StoreParameterDto.GetSearchKeywordParamDto param,
+            Student student
+    ) {
+        String keyword = param.getKeyword();
+        Long universityId = student.getUniversity().getId();
+
+        List<Store> stores = storeRepository.findStoresByMenuKeyword(keyword, universityId);
+
+        String geoKey = "locations";
+        String universityIdentifier = "university:" + universityId;
+
+        return stores.stream()
+                .map(store -> {
+                    String storeIdentifier = "store:" + store.getId();
+                    Distance distance = redisTemplate.opsForGeo()
+                            .distance(geoKey, universityIdentifier, storeIdentifier, Metrics.KILOMETERS);
+
+                    return StoreConverter.toStoreSearchResponseDto(
+                            store,
+                            keyword,
+                            distance != null ? distance.getValue() : null
+                    );
+                })
+                .filter(dto -> !dto.getMenuList().isEmpty())
+                .sorted(Comparator.comparing(StoreResponseDto.GetStoreSearchDto::getDistanceFromUniversityKm))
+                .toList();
+    }
+
+    @Cacheable(value = "storeSearch", key = "#param.keyword")
+    public List<StoreResponseDto.GetStoreSearchDto> searchStoreWithMenusByCoordinates(
+            StoreParameterDto.GetSearchKeywordParamDto param,
+            Double latitude,
+            Double longitude
+    ) {
+        String keyword = param.getKeyword();
+        List<Store> stores = storeRepository.findStoresByMenuKeywordAndCoordinates(keyword);
+
+        return stores.stream()
+                .map(store -> {
+                    Double storeLatitude = store.getLatitude();
+                    Double storeLongitude = store.getLongitude();
+
+                    // Haversine 공식을 사용해 거리 계산
+                    double distance = calculateDistance(latitude, longitude, storeLatitude, storeLongitude);
+
+                    return StoreConverter.toStoreSearchResponseDto(
+                            store,
+                            keyword,
+                            distance
+                    );
+                })
+                .filter(dto -> !dto.getMenuList().isEmpty())
+                .sorted(Comparator.comparing(StoreResponseDto.GetStoreSearchDto::getDistanceFromUniversityKm))
+                .toList();
+    }
+
+    public void saveAllStoreLocationsToRedis(){
+        List<Store> stores = storeRepository.findAll();
+        String key = "locations";
+
+        for (Store store : stores){
+            redisTemplate.opsForGeo().add(key, new Point(store.getLongitude(), store.getLatitude()), "store:"+store.getId());
+        }
+    }
+    public Store getStore(Long storeId){
+        return storeRepository.findById(storeId).orElseThrow(() -> new StoreHandler(ErrorStatus.STORE_NOT_FOUND));
+    }
+
+    private double calculateDistance(double lat1, double lon1, double lat2, double lon2) {
+        final int R = 6371;
+        double latDistance = Math.toRadians(lat2 - lat1);
+        double lonDistance = Math.toRadians(lon2 - lon1);
+        double a = Math.sin(latDistance / 2) * Math.sin(latDistance / 2)
+                + Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2))
+                * Math.sin(lonDistance / 2) * Math.sin(lonDistance / 2);
+        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+        return R * c;
+    }
+
+    public String getStoreBannerUrl(Store store){
+        String bannerUrl = null;
+        if(store.getBanner() != null) {
+            Banner storeBanner = bannerRepository.findByStore(store);
+            bannerUrl = storeBanner.getBannerUrl();
+        }
+
+
+        return bannerUrl;
+    }
+
+    public University getStoreUniversity(Store store){
+        StoreUniversity storeUniversity = storeUniversityRepository.findByStoreId(store.getId()).orElseThrow(()-> new UniversityHandler(ErrorStatus.STORE_UNIVERSITY_NOT_FOUND));
+
+        return  storeUniversity.getUniversity();
+    }
+
+    public List<OperatingHours> getOperatingHours(Long storeId){
+        Store store = storeRepository.findById(storeId).orElseThrow(()-> new StoreHandler(ErrorStatus.STORE_NOT_FOUND));
+        return store.getOperatingHoursList();
     }
 
     public List<Menu> getStoreMenu(Long storeId){
